@@ -3,11 +3,12 @@ package com.example.medicare_call.service.data_processor;
 import com.example.medicare_call.domain.CareCallRecord;
 import com.example.medicare_call.domain.CareCallSetting;
 import com.example.medicare_call.domain.Elder;
-import com.example.medicare_call.domain.MealRecord;
 import com.example.medicare_call.dto.data_processor.HealthDataExtractionResponse;
+import com.example.medicare_call.global.enums.HealthStatus;
+import com.example.medicare_call.global.enums.PsychologicalStatus;
 import com.example.medicare_call.repository.CareCallRecordRepository;
-import com.example.medicare_call.repository.MealRecordRepository;
 import com.example.medicare_call.service.ai.AiSummaryService;
+import com.example.medicare_call.service.report.MealRecordService;
 import com.example.medicare_call.service.statistics.StatisticsUpdateService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
@@ -19,23 +20,20 @@ import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.time.LocalDateTime;
 import java.time.LocalTime;
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyList;
+import static org.mockito.ArgumentMatchers.argThat;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
-public class CareCallAnalysisResultSaveServiceTest {
+class CareCallAnalysisResultSaveServiceTest {
 
     @Mock
     private CareCallRecordRepository careCallRecordRepository;
-
-    @Mock
-    private MealRecordRepository mealRecordRepository;
-
-    @Mock
-    private AiSummaryService aiSummaryService;
 
     @Mock
     private StatisticsUpdateService statisticsUpdateService;
@@ -45,22 +43,22 @@ public class CareCallAnalysisResultSaveServiceTest {
 
     @Mock
     private MedicationService medicationService;
+    
+    @Mock
+    private MealRecordService mealRecordService;
+
+    @Mock
+    private AiSummaryService aiSummaryService;
 
     @InjectMocks
     private CareCallAnalysisResultSaveService careCallAnalysisResultSaveService;
 
-    private CareCallSetting callSetting;
     private CareCallRecord callRecord;
-    private Elder elder;
 
     @BeforeEach
     void setUp() {
-        elder = Elder.builder()
-                .id(1)
-                .name("테스트 어르신")
-                .build();
-
-        callSetting = CareCallSetting.builder()
+        Elder elder = Elder.builder().id(1).build();
+        CareCallSetting setting = CareCallSetting.builder()
                 .firstCallTime(LocalTime.of(9,0))
                 .secondCallTime(LocalTime.of(13,0))
                 .thirdCallTime(LocalTime.of(19,0))
@@ -69,138 +67,88 @@ public class CareCallAnalysisResultSaveServiceTest {
         callRecord = CareCallRecord.builder()
                 .id(1)
                 .elder(elder)
-                .setting(callSetting)
+                .setting(setting)
+                // 3차 콜 시간대 설정 (19:00 이후)
                 .calledAt(LocalDateTime.of(2025, 11, 6, 20, 0))
-                .responded((byte) 1)
-                .psychologicalDetails(null)
-                .healthDetails(null)
                 .build();
     }
 
     @Test
-    @DisplayName("식사 데이터 저장 검증")
-    void updateCareCallRecordWithHealthData_savesMealData() {
+    @DisplayName("processAndSaveHealthData - 모든 데이터가 있을 때 정상 위임 및 업데이트")
+    void processAndSaveHealthData_DelegateAll() {
         // given
-        HealthDataExtractionResponse.MealData mealData = HealthDataExtractionResponse.MealData.builder()
-                .mealType("아침")
-                .mealEatenStatus("섭취함")
-                .mealSummary("김치찌개와 밥을 먹었음")
-                .build();
-
-        List<HealthDataExtractionResponse.MealData> mealDataList = List.of(mealData);
-
-        HealthDataExtractionResponse healthData = HealthDataExtractionResponse.builder()
-                .mealData(mealDataList)
-                .build();
-
-        when(mealRecordRepository.save(any(MealRecord.class))).thenReturn(MealRecord.builder().id(1).build());
-        when(careCallRecordRepository.save(any(CareCallRecord.class))).thenReturn(callRecord);
-
-        // when
-        careCallAnalysisResultSaveService.updateCareCallRecordWithHealthData(callRecord, healthData);
-
-        // then
-        verify(mealRecordRepository).save(any(MealRecord.class));
-        verify(careCallRecordRepository).save(any(CareCallRecord.class));
-    }
-
-    @Test
-    @DisplayName("식사 데이터 목록(List) 저장 검증")
-    void updateCareCallRecordWithHealthData_savesMealDataList() {
-        // given
-        HealthDataExtractionResponse.MealData breakfast = HealthDataExtractionResponse.MealData.builder()
-                .mealType("아침")
-                .mealEatenStatus("섭취함")
-                .mealSummary("김치찌개와 밥을 먹었음")
-                .build();
-
-        HealthDataExtractionResponse.MealData lunch = HealthDataExtractionResponse.MealData.builder()
-                .mealType("점심")
-                .mealEatenStatus("섭취함")
-                .mealSummary("된장찌개와 밥")
-                .build();
-
-        List<HealthDataExtractionResponse.MealData> mealDataList = List.of(breakfast, lunch);
-
-        HealthDataExtractionResponse healthData = HealthDataExtractionResponse.builder()
-                .mealData(mealDataList)
-                .build();
-
-        when(mealRecordRepository.save(any(MealRecord.class))).thenReturn(MealRecord.builder().id(1).build());
-        when(careCallRecordRepository.save(any(CareCallRecord.class))).thenReturn(callRecord);
-
-        // when
-        careCallAnalysisResultSaveService.updateCareCallRecordWithHealthData(callRecord, healthData);
-
-        // then
-        verify(mealRecordRepository, times(2)).save(any(MealRecord.class));
-        verify(careCallRecordRepository).save(any(CareCallRecord.class));
-    }
-
-    @Test
-    @DisplayName("심리 상태 데이터 저장 검증")
-    void updateCareCallRecordWithHealthData_updatesPsychologicalStatus() {
-        // given
-        List<String> psychologicalState = Arrays.asList("기분이 좋음", "잠을 잘 잤음");
-        HealthDataExtractionResponse healthData = HealthDataExtractionResponse.builder()
-                .psychologicalState(psychologicalState)
-                .psychologicalStatus("좋음")
-                .build();
-
-        when(careCallRecordRepository.save(any(CareCallRecord.class))).thenReturn(callRecord);
-
-        // when
-        careCallAnalysisResultSaveService.updateCareCallRecordWithHealthData(callRecord, healthData);
-
-        // then
-        verify(careCallRecordRepository).save(argThat(record -> 
-            record.getPsychStatus() != null && 
-            record.getPsychologicalDetails() != null &&
-            record.getPsychologicalDetails().contains("기분이 좋음")
-        ));
-    }
-
-    @Test
-    @DisplayName("건강 징후 데이터 저장 검증")
-    void updateCareCallRecordWithHealthData_updatesHealthStatus() {
-        // given
-        List<String> healthSigns = Arrays.asList("혈당이 정상 범위", "식사 후 혈당 측정");
-        HealthDataExtractionResponse healthData = HealthDataExtractionResponse.builder()
-                .healthSigns(healthSigns)
-                .healthStatus("좋음")
-                .build();
-
-        when(careCallRecordRepository.save(any(CareCallRecord.class))).thenReturn(callRecord);
-
-        // when
-        careCallAnalysisResultSaveService.updateCareCallRecordWithHealthData(callRecord, healthData);
-
-        // then
-        verify(careCallRecordRepository).save(argThat(record -> 
-            record.getHealthStatus() != null && 
-            record.getHealthDetails() != null &&
-            record.getHealthDetails().contains("혈당이 정상 범위")
-        ));
-    }
-
-    @Test
-    @DisplayName("수면 데이터 저장 검증")
-    void updateCareCallRecordWithHealthData_updatesSleepData() {
-        // given
+        HealthDataExtractionResponse.MealData mealData = HealthDataExtractionResponse.MealData.builder().build();
+        HealthDataExtractionResponse.BloodSugarData bloodSugarData = HealthDataExtractionResponse.BloodSugarData.builder().build();
+        HealthDataExtractionResponse.MedicationData medicationData = HealthDataExtractionResponse.MedicationData.builder().build();
         HealthDataExtractionResponse.SleepData sleepData = HealthDataExtractionResponse.SleepData.builder()
                 .sleepStartTime("22:00")
                 .sleepEndTime("06:00")
-                .totalSleepTime("8시간")
+                .build();
+
+        HealthDataExtractionResponse healthData = HealthDataExtractionResponse.builder()
+                .mealData(Collections.singletonList(mealData))
+                .bloodSugarData(Collections.singletonList(bloodSugarData))
+                .medicationData(Collections.singletonList(medicationData))
+                .sleepData(sleepData)
+                .psychologicalState(List.of("기분 좋음"))
+                .psychologicalStatus("좋음")
+                .build();
+        
+        // when
+        careCallAnalysisResultSaveService.processAndSaveHealthData(callRecord, healthData);
+
+        // then
+        verify(bloodSugarService).saveBloodSugarData(eq(callRecord), anyList());
+        verify(medicationService).saveMedicationTakenRecord(eq(callRecord), anyList());
+        verify(mealRecordService).saveMealData(eq(callRecord), anyList());
+        
+        // 4. 레코드 업데이트 확인 (수면, 심리)
+        verify(careCallRecordRepository).save(argThat(record -> 
+            record.getSleepStart() != null &&
+            record.getPsychStatus() == PsychologicalStatus.GOOD.getValue()
+        ));
+        
+        // 5. 통계 업데이트 확인
+        verify(statisticsUpdateService).updateStatistics(any(CareCallRecord.class));
+    }
+
+    @Test
+    @DisplayName("processAndSaveHealthData - 데이터가 없을 때 로직 스킵")
+    void processAndSaveHealthData_NullData_Skip() {
+        // given
+        HealthDataExtractionResponse healthData = HealthDataExtractionResponse.builder()
+                .mealData(null)
+                .bloodSugarData(null)
+                .medicationData(null)
+                .build();
+        
+        // when
+        careCallAnalysisResultSaveService.processAndSaveHealthData(callRecord, healthData);
+
+        // then
+        verify(bloodSugarService, never()).saveBloodSugarData(any(), any());
+        verify(medicationService, never()).saveMedicationTakenRecord(any(), any());
+        verify(mealRecordService, never()).saveMealData(any(), any());
+        
+        verify(careCallRecordRepository).save(any(CareCallRecord.class));
+    }
+
+    @Test
+    @DisplayName("수면 데이터 업데이트 테스트")
+    void updateSleepData_Success() {
+        // given
+        HealthDataExtractionResponse.SleepData sleepData = HealthDataExtractionResponse.SleepData.builder()
+                .sleepStartTime("22:00")
+                .sleepEndTime("07:00")
+                .totalSleepTime("9시간")
                 .build();
 
         HealthDataExtractionResponse healthData = HealthDataExtractionResponse.builder()
                 .sleepData(sleepData)
                 .build();
 
-        when(careCallRecordRepository.save(any(CareCallRecord.class))).thenReturn(callRecord);
-
         // when
-        careCallAnalysisResultSaveService.updateCareCallRecordWithHealthData(callRecord, healthData);
+        careCallAnalysisResultSaveService.processAndSaveHealthData(callRecord, healthData);
 
         // then
         verify(careCallRecordRepository).save(argThat(record -> 
@@ -210,107 +158,39 @@ public class CareCallAnalysisResultSaveServiceTest {
     }
 
     @Test
-    @DisplayName("모든 데이터가 null일 때 저장되지 않음")
-    void updateCareCallRecordWithHealthData_withNullData_doesNotSave() {
+    @DisplayName("건강 상태 업데이트 테스트 - 3차 콜일 때만")
+    void updateHealthStatus_Success() {
         // given
         HealthDataExtractionResponse healthData = HealthDataExtractionResponse.builder()
-                .mealData(null)
-                .sleepData(null)
-                .psychologicalState(null)
-                .healthSigns(null)
-                .build();
-
-        when(careCallRecordRepository.save(any(CareCallRecord.class))).thenReturn(callRecord);
-
-        // when
-        careCallAnalysisResultSaveService.updateCareCallRecordWithHealthData(callRecord, healthData);
-
-        // then
-        verify(mealRecordRepository, never()).save(any(MealRecord.class));
-        verify(careCallRecordRepository).save(any(CareCallRecord.class));
-    }
-
-    @Test
-    @DisplayName("AI 건강 분석 코멘트 생성 및 저장 검증")
-    void updateCareCallRecordWithHealthData_generatesAndSavesAiComment() {
-        // given
-        List<String> healthSigns = Arrays.asList("두통", "어지러움");
-        HealthDataExtractionResponse healthData = HealthDataExtractionResponse.builder()
-                .healthSigns(healthSigns)
+                .healthSigns(List.of("기침"))
                 .healthStatus("나쁨")
                 .build();
 
-        String expectedComment = "두통과 어지러움 증상이 있습니다. 휴식을 취하고, 증상이 계속되면 병원 방문을 고려해 보세요.";
-        when(aiSummaryService.getSymptomAnalysis(healthSigns)).thenReturn(expectedComment);
-        when(careCallRecordRepository.save(any(CareCallRecord.class))).thenReturn(callRecord);
-
         // when
-        careCallAnalysisResultSaveService.updateCareCallRecordWithHealthData(callRecord, healthData);
+        careCallAnalysisResultSaveService.processAndSaveHealthData(callRecord, healthData);
 
         // then
-        verify(aiSummaryService).getSymptomAnalysis(healthSigns);
         verify(careCallRecordRepository).save(argThat(record ->
-            record.getAiHealthAnalysisComment().equals(expectedComment) &&
-            record.getHealthDetails().equals("두통, 어지러움")
+                record.getHealthStatus() == HealthStatus.BAD.getValue() &&
+                record.getHealthDetails().contains("기침")
         ));
     }
 
     @Test
-    @DisplayName("식사하지 않음 상태 저장 검증")
-    void updateCareCallRecordWithHealthData_savesNotEatenStatus() {
+    @DisplayName("AI 코멘트 업데이트 테스트")
+    void updateAiComment_Success() {
         // given
-        HealthDataExtractionResponse.MealData mealData = HealthDataExtractionResponse.MealData.builder()
-                .mealType("아침")
-                .mealEatenStatus("섭취하지 않음")
-                .mealSummary("아침 식사를 하지 않았음")
-                .build();
+        callRecord = callRecord.toBuilder().healthDetails("두통").build();
+        HealthDataExtractionResponse healthData = HealthDataExtractionResponse.builder().build(); // 빈 응답
 
-        List<HealthDataExtractionResponse.MealData> mealDataList = List.of(mealData);
-
-        HealthDataExtractionResponse healthData = HealthDataExtractionResponse.builder()
-                .mealData(mealDataList)
-                .build();
-
-        when(mealRecordRepository.save(any(MealRecord.class))).thenReturn(MealRecord.builder().id(1).build());
-        when(careCallRecordRepository.save(any(CareCallRecord.class))).thenReturn(callRecord);
+        when(aiSummaryService.getSymptomAnalysis(anyList())).thenReturn("병원 방문 권장");
 
         // when
-        careCallAnalysisResultSaveService.updateCareCallRecordWithHealthData(callRecord, healthData);
+        careCallAnalysisResultSaveService.processAndSaveHealthData(callRecord, healthData);
 
         // then
-        verify(mealRecordRepository).save(argThat(record ->
-            record.getEatenStatus() == (byte) 0 // NOT_EATEN
+        verify(careCallRecordRepository).save(argThat(record ->
+                "병원 방문 권장".equals(record.getAiHealthAnalysisComment())
         ));
-        verify(careCallRecordRepository).save(any(CareCallRecord.class));
     }
-
-    @Test
-    @DisplayName("식사 여부가 null일 때 null로 저장하고 고정 메시지 설정")
-    void updateCareCallRecordWithHealthData_savesNullEatenStatusAndFixedMessageWhenNull() {
-        // given
-        HealthDataExtractionResponse.MealData mealData = HealthDataExtractionResponse.MealData.builder()
-                .mealType("아침")
-                .mealEatenStatus(null)
-                .mealSummary("아침 식사")
-                .build();
-
-        List<HealthDataExtractionResponse.MealData> mealDataList = List.of(mealData);
-
-        HealthDataExtractionResponse healthData = HealthDataExtractionResponse.builder()
-                .mealData(mealDataList)
-                .build();
-
-        when(mealRecordRepository.save(any(MealRecord.class))).thenReturn(MealRecord.builder().id(1).build());
-        when(careCallRecordRepository.save(any(CareCallRecord.class))).thenReturn(callRecord);
-
-        // when
-        careCallAnalysisResultSaveService.updateCareCallRecordWithHealthData(callRecord, healthData);
-
-        // then
-        verify(mealRecordRepository).save(argThat(record ->
-            record.getEatenStatus() == null && // null로 저장
-            CareCallAnalysisResultSaveService.MEAL_STATUS_UNKNOWN_MESSAGE.equals(record.getResponseSummary()) // 고정 메시지
-        ));
-        verify(careCallRecordRepository).save(any(CareCallRecord.class));
-    }
-} 
+}
